# VideoProcessing

./: LICENSE  README.md
remux/: README.md  remux_tofile.cpp  remux_tostream.cpp
transcode/: CMakeLists.txt  README.md  transcode.cpp
